# soleCAN

./: .dockerignore  .gitignore  CLAUDE.md  DOCUMENTATION.md  Dockerfile  NOTES.txt  README.md  UDANN.txt  dashboard.html  parse_solectrac_can.py  pyproject.toml  solecan-analyze.py  solecan-stream.py  solecan_proto.py  solectrac-analyze.py  solectrac-stream.py  solectrac.dbc  solectrac_proto.py
.github/workflows/: docker-builds.yml
android/: .gitignore  Dockerfile  README.md  make_icons.py  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: dashboard.html
bms/: .solectrac-bms-diagnostics.py.swp  README.md  solectrac-bms-diagnostics.py  udan_seedkey.py
docs/superpowers/plans/: 2026-07-18-sd-file-api.md  2026-07-23-runtime-sta-wifi-config.md
docs/superpowers/specs/: 2026-07-18-sd-file-api-design.md  2026-07-23-runtime-sta-wifi-config-design.md
embedded/esp32-s3/: .env.example  .gitignore  Dockerfile  README.md  copy_dashboard.py  device-test.py  inject_build_overrides.py  inject_git_sha.py  platformio.ini
embedded/esp32-s3/boards/: esp32s3_flash_16MB.json
embedded/esp32-s3/src/: dashboard.html  main.cpp
esp32/: platformio.ini
esp32-s3/: .gitignore  Dockerfile  README.md  copy_dashboard.py  device-test.py
esp32-s3/src/: main.cpp
esp32/src/: main.cpp
kelly/: README.md  isolator.txt  solectrac-kelly-dump-config.py  solectrac-kelly-monitor.py
kelly/esp32-bridge/: esp32-bridge.ino
kelly/rejsacan-passthrough/: rejsacan-passthrough.ino
util/: solectrac-inject-f108.py
(+8 files in other folders)
