[project]
name = "solectrac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-can>=4.0",
    "pyserial>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
ble = ["bless>=0.3"]
canalyst = ["canalystii>=0.1"]
all = ["bless>=0.3", "canalystii>=0.1"]

# bless pulls Windows-only pre-release winrt-* packages. We don't run on
# Windows, so restrict the universal lockfile to macOS + Linux to avoid
# uv refusing the resolution.
[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
